--- a/www/templates/tab-reviews.html
+++ b/www/templates/tab-reviews.html
@@ -1,8 +1,27 @@
 <ion-view title="BLANK">
   <ion-content class="has-header padding">
-    <ion-item ng-repeat="review in reviewData" 
-                  item="item"
-                  >
-          Item {{ review.rtitle}}
+   <ion-list>
+    <div class="item-container">
+      <ion-item ng-repeat="review in reviews" type="item-text-wrap">
+        
+        	
+        	<div class="star-container">
+        		<span class="stars">{{review.rating}}</span>
+
+        	</div>
+
+        	<div class="review-data">
+	        	<h3>{{review.rtitle}} </h3>
+	        	<p>{{review.message}}</p>
+	        </div>
+
+	        <div class="review-respond">
+	        	<span class="button button-block button-positive">Respond</span>
+	        </div>
+      		<div style="clear:both;"></div>
+      </ion-item>
+    </div>
+    </ion-list>
   </ion-content>
+
 </ion-view>
