--- a/www/templates/tab-bookings.html
+++ b/www/templates/tab-bookings.html
@@ -1,5 +1,18 @@
-<ion-view title="BLANK">
+<ion-view title="Reservations">
   <ion-content class="has-header padding">
-    <p> CONTENT </p>
+    <ion-list>
+      <ion-item type="item-text-wrap" href="#/tab/bookings/booking-requests">
+      	<i class="icon ion-alert"></i>
+			Booking Requests
+      </ion-item>
+
+      <ion-item type="item-text-wrap" href="#/tab/bookings/reservations">
+      	<i class="icon ion-ios7-bookmarks"></i>
+			Reservations
+      </ion-item>
+
+      
+
+    </ion-list>
   </ion-content>
 </ion-view>
