--- a/www/templates/tab-customers.html
+++ b/www/templates/tab-customers.html
@@ -1,5 +1,24 @@
 <ion-view title="BLANK">
+<ion-nav-buttons side="right">
+  <button class="button button-icon icon ion-plus-round" ng-click="newUser()"></button>
+</ion-nav-buttons>
+<ion-nav-buttons side="left">
+  <button class="button button-icon icon ion-gear-a" ng-click="newUser()"></button>
+</ion-nav-buttons>
   <ion-content class="has-header padding">
-    <p> CONTENT </p>
+          <div class="list">
+
+    <div class="item item-divider"
+        ng-repeat-start="(firstLetter, customers) in customers">
+        {{firstLetter}}
+    </div>
+
+    <div class="item"
+         ng-repeat="customer in customers">{{ customer }}
+    </div>
+
+    <div ng-repeat-end></div>
+
+</div>
   </ion-content>
 </ion-view>
