--- a/www/templates/booking-requests.html
+++ b/www/templates/booking-requests.html
@@ -1,5 +1,14 @@
 <ion-view title="Booking Requests">
   <ion-content class="has-header padding">
-    <p> CONTENT </p>
+    <ion-list>
+  <ion-item ng-repeat="booking in bookings">
+    <h2>Joe Bloggs</h2>
+    <ul>
+    	<li><b>Time:</b> {{booking.timeOfBooking}}</li>
+    	<li><b>Date:</b> {{booking.dateOfBooking | date :fulldate}}</li>
+    	<li><b>Heads:</b> {{booking.noOfGuests}}</li>
+    </ul>
+  </ion-item>
+</ion-list>
   </ion-content>
 </ion-view>
