--- a/www/templates/tab-menus.html
+++ b/www/templates/tab-menus.html
@@ -1,4 +1,7 @@
 <ion-view title="BLANK">
+<ion-nav-buttons side="right">
+  <button class="button button-clear" ng-click="newOffer()">Create Offer</button>
+</ion-nav-buttons>
   <ion-content class="has-header padding">
     <p> CONTENT </p>
   </ion-content>
