--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -19,6 +19,11 @@
     <ion-nav-view name="menus-tab"></ion-nav-view>
   </ion-tab>
 
+  <!-- Messages Tab -->
+  <ion-tab title="Messages" icon="icon ion-ios7-email" href="#/tab/msg">
+    <ion-nav-view name="msg-tab"></ion-nav-view>
+  </ion-tab>
+
    <!-- Log Out Tab -->
   <ion-tab title="Log Out" icon="icon ion-log-out" href="#/tab/logout">
     <ion-nav-view name="logout-tab"></ion-nav-view>
