--- a/www/templates/tab-customers.html
+++ b/www/templates/tab-customers.html
@@ -10,16 +10,19 @@
     
     <div class="list">
 
-    <div class="item item-divider"
-        ng-repeat-start="(firstLetter, customers) in customers">
-        {{firstLetter}}
+    <!-- <input type="search" ng-model="customers" /> -->
+    <div ng-repeat="customer in customers | orderBy:'lastname'">
+      <div class="item item-divider">
+          {{customer.lastname}}, {{ customer.firstname }} 
+      </div>
+
+      <div class="item">
+        <p>{{ customer.email }}</p>
+        <p>{{ customer.dob }}</p>
+      </div>
     </div>
 
-    <div class="item"
-         ng-repeat="customer in customers">{{ customer }}
-    </div>
-
-    <div ng-repeat-end></div>
+    <!-- <div ng-repeat-end></div> -->
 
   </div>
 
