--- a/www/templates/tab-reviews.html
+++ b/www/templates/tab-reviews.html
@@ -17,7 +17,7 @@
 	        </div>
 
 	        <div class="review-respond">
-	        	<buton class="button button-block button-positive" ng-click="respondReview()">Respond</button>
+	        	<buton class="button button-block button-positive" ng-click="respondReview($index)">Respond</button>
 	        </div>
       		<div style="clear:both;"></div>
       </ion-item>
