--- a/www/templates/modal-add-customer.html
+++ b/www/templates/modal-add-customer.html
@@ -23,6 +23,10 @@
             <input type="email" placeholder="joeb@wit.com" ng-model="user.email">
           </label>
           <label class="item item-input item-stacked-label">
+            <span class="input-label">Phone</span>
+            <input type="text" placeholder="085 1427231" ng-model="user.phone">
+          </label>
+          <label class="item item-input item-stacked-label">
             <span class="input-label">Password</span>
             <input type="password" ng-model="user.password">
           </label>
@@ -35,7 +39,7 @@
             <input type="date" ng-model="user.dob">
           </label>
           <div style="width:80%; margin-left:auto; margin-right:auto;">
-            <button type="submit" class="button button-block button-positive">Add Customer</button>
+            <button type="submit" class="button button-block button-positive">Sign Up</button>
           </div>
         </div>
       </form>
