--- a/www/templates/tab-customers.html
+++ b/www/templates/tab-customers.html
@@ -1,4 +1,4 @@
-<ion-view title="BLANK">
+<ion-view title="Customers">
 <ion-nav-buttons side="right">
   <button class="button button-icon icon ion-plus-round" ng-click="newUser()"></button>
 </ion-nav-buttons>
