--- a/www/templates/tab-logout.html
+++ b/www/templates/tab-logout.html
@@ -1,5 +1,9 @@
-<ion-view title="BLANK">
+<ion-view title="Log Out">
   <ion-content class="has-header padding">
-    <p> CONTENT </p>
+    <div style="width:60%; margin-left:auto; margin-right:auto; text-align:center; padding-top: 24px;">
+    	<h2> Are you sure you want to log out? </h2>
+	    <button class="button button-block button-positive" ng-click="logOut()">Yes</button>
+	  	<button class="button button-block button-positive" ng-click="dontLogOut()">No</button>
+	</div>
   </ion-content>
 </ion-view>
