--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -24,6 +24,11 @@
     <ion-nav-view name="msg-tab"></ion-nav-view>
   </ion-tab>
 
+  <!-- Offers Tab -->
+  <ion-tab title="Offers" icon="icon ion-heart" href="#/tab/offers">
+    <ion-nav-view name="offers-tab"></ion-nav-view>
+  </ion-tab>
+
    <!-- Log Out Tab -->
   <ion-tab title="Log Out" icon="icon ion-log-out" href="#/tab/logout">
     <ion-nav-view name="logout-tab"></ion-nav-view>
