--- a/www/templates/tab-bookings.html
+++ b/www/templates/tab-bookings.html
@@ -1,18 +1,16 @@
-<ion-view title="Reservations">
+<ion-view title="Booking Requests">
   <ion-content class="has-header padding">
     <ion-list>
-      <ion-item type="item-text-wrap" href="#/tab/bookings/booking-requests">
-      	<i class="icon ion-alert"></i>
-			Booking Requests
+      <ion-item ng-repeat="booking in bookings | orderBy:'bookingdate'">
+
+        <h2>Joe Bloggs</h2>
+        <!-- <h2>{{booking.booker}}</h2> -->
+          <ul>
+            <li><b>Time:</b> {{booking.bookingtime}}</li>
+            <li><b>Date:</b> {{booking.bookingdate | date :fulldate}}</li>
+            <li><b>Heads:</b> {{booking.bookingguests}}</li>
+          </ul>
       </ion-item>
-
-      <ion-item type="item-text-wrap" href="#/tab/bookings/reservations">
-      	<i class="icon ion-ios7-bookmarks"></i>
-			Reservations
-      </ion-item>
-
-      
-
     </ion-list>
   </ion-content>
 </ion-view>
