--- a/www/templates/tab-offers.html
+++ b/www/templates/tab-offers.html
@@ -1,4 +1,4 @@
-<ion-view title="Booking Requests">
+<ion-view title="Special Offers">
 <ion-nav-buttons side="right">
     <button class="button button-clear" ng-click="newOffer()">Add Offer</button>
   </ion-nav-buttons>
