--- a/www/css/app.css
+++ b/www/css/app.css
@@ -1,5 +1,11 @@
 /* Your app's CSS, go crazy, make it your own */
-
+/*Overall App Style*/
+.tabs{
+  border-color: #145fd7;
+background-color: #4a87ee;
+background-image: linear-gradient(0deg, #145fd7, #145fd7 50%, transparent 50%);
+color: #fff;
+}
 .ionic-logo {
   display: block;
   margin: 15px auto;
