--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -4,15 +4,15 @@
   <ion-content has-header="true" padding="true">
     <div class="eighty-w">
       <h1> Chefs Lounge</h1>
-      <div class="list">    
+      <div class="list">
         <label class="item item-input">
             <span class="input-label">Username</span>
-            <input type="text" ng-model="user.username"> 
+            <input type="text" ng-model="user.username" required> 
           </label>
 
           <label class="item item-input">
               <span class="input-label">Password</span>
-              <input type="password" ng-model="user.password">
+              <input type="password" ng-model="user.password" required>
           </label>
       </div>
       
