--- a/www/templates/tab-menus.html
+++ b/www/templates/tab-menus.html
@@ -2,27 +2,77 @@
 	
 	<ion-nav-buttons side="right">
 		<button class="button button-clear" ng-click="newItem()">New Item</button>
+		
 	</ion-nav-buttons>
+
 	<ion-nav-buttons side="left">
 		<button class="button button-clear" ng-click="newMenu()">Add Menu</button>
 	</ion-nav-buttons>
 	
 	<ion-content scroll="false">
+
 		<div class="left-side">
-			<ion-list>
+			<ion-list option-buttons="menuButtons" can-swipe="true">
 				<ion-item ng-repeat="menu in menus" ng-click="selectMenu(menu, $index)" ng-class="{active: activeMenu == menu}">
-				{{menu.title}}
+				{{menu.menuName}}
 				</ion-item>
 			</ion-list>
 		</div>
 		
 		<div class="right-side">
+
 			<ion-list>
+
 				<ion-item ng-repeat="item in activeMenu.items">
-				{{item.title}}
+				{{item.title}}<span style="float:right;">€{{item.price}}
+				<!-- <span class="del-edit">
+					<button class="button" ng-click="deleteItem($index)">DEL</button>
+				</span> -->
+
+
+
+				</span>
+				
 				</ion-item>
 			</ion-list>
 		</div>
 	</ion-content>
+
+	<!-- MODALS -->
+	<script id="item-modal.html" type="text/ng-template">
+
+	<div class="modal">
+ <!-- Modal header bar -->
+    <ion-header-bar class="bar-positive nav-title-slide-ios7">
+      <h1 class="title">Add Menu Item</h1>
+      <button class="button button-clear button-light" ng-click="closeNewItem()">Cancel</button>
+    </ion-header-bar>
+
+    <!-- Modal content area -->
+    <ion-content>
+      <form>
+        <div class="list">
+          <label class="item item-input item-stacked-label">
+            <span class="input-label">Item</span>
+            <input type="text" placeholder="Fish" ng-model="item.title">
+          </label>
+          <label class="item item-input item-stacked-label">
+            <span class="input-label">Price</span>
+            <input type="text" placeholder="10.95" ng-model="item.price">
+          </label>
+          
+          <div style="width:80%; margin-left:auto; margin-right:auto;">
+            <ion-button class="button button-block button-positive" ng-click="createItem(item)">
+		  				Add
+				</ion-button>
+				
+          </div>
+        </div>
+      </form>
+    </ion-content>
+  </div>
+
+
+	</script>
 </ion-view>
 
