--- a/www/templates/tab-menus.html
+++ b/www/templates/tab-menus.html
@@ -2,11 +2,11 @@
 	
 	<ion-nav-buttons side="right">
 		<button class="button button-clear" ng-click="newItem()">New Item</button>
-		
+		<button class="button button-clear" ng-click="newMenu()">Add Menu</button>
 	</ion-nav-buttons>
 
 	<ion-nav-buttons side="left">
-		<button class="button button-clear" ng-click="newMenu()">Add Menu</button>
+		<button class="button button-clear" ng-click="syncMenu()">Sync</button>
 	</ion-nav-buttons>
 	
 	<ion-content scroll="false">
