--- a/www/templates/tab-msg.html
+++ b/www/templates/tab-msg.html
@@ -1,18 +1,21 @@
 <ion-view title="Message Center">
   <ion-content class="has-header padding">
     <ion-list>
-  <ion-item ng-repeat="message in messages">
+  <ion-item ng-repeat="message in messages | orderBy:'-sent'">
+
     <div class="msg-left">
-    <h2>Joe Bloggs</h2>
-    <ul>
-    	<li><b>Subject</b> {{message.subject}}</li>
-    	<li><b>Message:</b></li>
-    	<li>{{message.message}}</li>
-    </ul>
+      <h1><b>Subject:</b> {{message.subject}}</h1>
+      <h2>From: {{message.firstname}} {{message.lastname}}</h2>
+      <h2>Received: {{message.sent}}</h2>
+      <hr />
+      <p><b>Message:</b> {{message.message}} </p>
+      
     </div>
+
     <div class="msg-right">
-      <buton class="button button-block button-positive" ng-click="respondReview($index)">Respond</button>
+      <buton class="button button-block button-positive" ng-click="respondMsg($index)">Respond</button>
     </div>
+    
     <div style="clear:both;"></div>
   </ion-item>
 </ion-list>
