--- a/www/templates/tab-reviews.html
+++ b/www/templates/tab-reviews.html
@@ -3,7 +3,7 @@
   
    <ion-list>
     <div class="item-container">
-      <ion-item ng-repeat="review in reviews" type="item-text-wrap">
+      <ion-item ng-repeat="review in reviews | orderBy:'-sent'" type="item-text-wrap">
         
         	
         	<div class="star-container">
@@ -12,8 +12,13 @@
         	</div>
 
         	<div class="review-data">
-	        	<h3>{{review.rtitle}} </h3>
-	        	<p>{{review.message}}</p>
+	        	<h1>{{review.rtitle}} </h1>
+            <hr />
+            <p>{{review.message}}</p>
+            <hr />
+            <h3>{{review.firstname}} | {{review.sent}}</h3>
+            
+	        	
 	        </div>
 
 	        <div class="review-respond">
