--- a/www/templates/tab-bookings.html
+++ b/www/templates/tab-bookings.html
@@ -1,5 +1,10 @@
-<ion-view title="Booking Requests">
+<ion-view title="Booking Requests" ng-init="getBookingFn()">
   <ion-content class="has-header padding">
+    <ion-refresher on-refresh="doRefresh()"
+                        pulling-text="Pull to refresh..."
+                        refreshing-text="Refreshing!"
+                        refreshing-icon="ion-loading-a">
+        </ion-refresher>
     <ion-list>
       <ion-item ng-repeat="booking in bookings | orderBy:['bookingdate','bookingtime']">
 
