--- a/www/templates/tab-logout.html
+++ b/www/templates/tab-logout.html
@@ -5,5 +5,11 @@
 	    <button class="button button-block button-positive" ng-click="logOut()">Yes</button>
 	  	<button class="button button-block button-positive" ng-click="dontLogOut()">No</button>
 	</div>
+
+	<div style="width:60%; margin-left:auto; margin-right:auto; margin-top: 34px; text-align:center; padding-top: 24px;">
+    	<h2>If you wish to delete all the menus from the device, click below.</h2>
+    	<h3> WARNING! THIS CAN NOT BE REVERSED! </h3>
+	    <button class="button button-block button-assertive" ng-click="delAllMenus()">DELETE MENUS</button>
+	</div>
   </ion-content>
 </ion-view>
