--- a/www/templates/tab-msg.html
+++ b/www/templates/tab-msg.html
@@ -1,5 +1,10 @@
-<ion-view title="Message Center">
+<ion-view title="Message Center" ng-init="getMsgFn()">
   <ion-content class="has-header padding">
+    <ion-refresher on-refresh="doRefresh()"
+                      pulling-text="Pull to refresh..."
+                      refreshing-text="Refreshing!"
+                      refreshing-icon="ion-loading-a">
+      </ion-refresher>
     <ion-list>
   <ion-item ng-repeat="message in messages | orderBy:'-sent'">
 
