--- a/www/templates/tab-offers.html
+++ b/www/templates/tab-offers.html
@@ -1,8 +1,15 @@
-<ion-view title="Special Offers">
+<ion-view title="Special Offers" ng-init="getOfferFn()">
 <ion-nav-buttons side="right">
     <button class="button button-clear" ng-click="newOffer()">Add Offer</button>
   </ion-nav-buttons>
   <ion-content class="has-header padding">
+
+    <ion-refresher on-refresh="doRefresh()"
+                        pulling-text="Pull to refresh..."
+                        refreshing-text="Refreshing!"
+                        refreshing-icon="ion-loading-a">
+        </ion-refresher>
+        
     <ion-list>
   <ion-item ng-repeat="offer in offers">
     <h2>{{offer.title}}</h2>
@@ -11,4 +18,45 @@
   </ion-item>
 </ion-list>
   </ion-content>
+
+   <!-- New Offer Modal 
+ ==================================================-->
+<script id="new-offer.html" type="text/ng-template">
+
+  <div class="modal">
+
+    <!-- Modal header bar -->
+    <ion-header-bar class="bar-positive nav-title-slide-ios7">
+      <h1 class="title">Create Special Offer</h1>
+      <button class="button button-clear button-light" ng-click="closeNewOffer()">Cancel</button>
+    </ion-header-bar>
+
+    <!-- Modal content area -->
+    <ion-content>
+      <form name="createOfferForm" novalidate="novalidate" ng-submit="createOffer(offer)">
+        <div class="list">
+          <label class="item item-input item-stacked-label">
+            <span class="input-label">Title</span>
+            <input type="text" placeholder="50% Off" ng-model="offer.title">
+          </label>
+          <label class="item item-input item-stacked-label">
+          <span class="input-label">Offer Details</span>
+          <textarea placeholder="To avail of the offer..."
+                    ng-model="offer.message"
+                    required
+                    maxlength="240">
+          </textarea>
+        </label>
+        <label class="item item-input item-stacked-label">
+            <span class="input-label">Expires</span>
+            <input type="date" ng-model="offer.expire">
+          </label>
+          <div style="width:80%; margin-left:auto; margin-right:auto;">
+            <button type="submit" class="button button-block button-positive">Create Offer</button>
+          </div>
+        </div>
+      </form>
+    </ion-content>
+  </div>
+</script>
 </ion-view>
