--- a/www/templates/tab-offers.html
+++ b/www/templates/tab-offers.html
@@ -12,9 +12,11 @@
         
     <ion-list>
   <ion-item ng-repeat="offer in offers">
-    <h2>{{offer.title}}</h2>
-    <p>{{offer.message}}</p>
-    <p><b>Expires:</b> {{offer.expire}}</p>
+    <div class="whiteadj">
+      <h2>{{offer.title}}</h2>
+      <p>{{offer.message}}</p>
+      <p><b>Expires:</b> {{offer.expire}}</p>
+    </div>
   </ion-item>
 </ion-list>
   </ion-content>
